<?xml version="1.0"?>
<package format="2">
  <name>datmo</name>
  <version>0.0.0</version>
  <description>The LIDAR Detection and Tracking of Moving Objects package. Ported to ROS2</description>
  <author email="kostaskonkk@gmail.com">Kostas Konstantinidis</author> 
  <maintainer email="omadityasiddharth123@gmail.com">Siddharth Saha</maintainer>
  <license>BSD</license>
  <license>MIT</license>

  <url type="repository">https://github.com/kostaskonkk/datmo</url> 

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>boost</depend>
  <depend>rclcpp</depend>>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
